--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,5 +54,19 @@
         android:text="@string/btn_question">
     </RadioButton>
 
+    <ImageView
+        android:id="@+id/acLogo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo_algonquin">
+    </ImageView>
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/myimagebutton"
+        android:src="@drawable/logo_algonquin">
+    </ImageButton>
+
 
 </LinearLayout>
