--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/myedittext"
         android:text="@string/editmessage"
+        android:inputType="text"
         android:hint="@string/hinttext">
     </EditText>
 
@@ -55,18 +56,17 @@
     </RadioButton>
 
     <ImageView
-        android:id="@+id/acLogo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/logo_algonquin">
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/ac_logo"
+        android:contentDescription="logo of algonquin">
     </ImageView>
 
     <ImageButton
+        android:id="@+id/myimagebutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/myimagebutton"
-        android:src="@drawable/logo_algonquin">
+        android:src="@drawable/ac_logo">
     </ImageButton>
-
 
 </LinearLayout>
