--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="my_primary">#FFBB86FC</color>
+    <color name="my_primary">#3F51B5</color>
     <color name="my_secondary">#FF6200EE</color>
-    <color name="my_statusbar">#9991AA</color>
+    <color name="my_statusbar">#4CAF50</color>
     <color name="my_text">#ED0A0A</color>
 
-    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_200">#FF9800</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
