--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="my_primary">#FFBB86FC</color>
     <color name="my_secondary">#FF6200EE</color>
     <color name="my_statusbar">#9991AA</color>
-    <color name="my_text">#ED0A0A</color>
+    <color name="my_text">#038A7D</color>
 
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
