Week8 - completed lab 8 -Tablet and phone fragments

--- a/app/src/main/res/layout/details_layout.xml
+++ b/app/src/main/res/layout/details_layout.xml
@@ -4,13 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/messageText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:text="MessageGoesHere"
@@ -19,7 +20,7 @@
 
     <TextView
         android:id="@+id/timeText"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -29,7 +30,7 @@
 
     <TextView
         android:id="@+id/sendOrReceive"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -39,7 +40,7 @@
 
     <TextView
         android:id="@+id/databaseText"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
