--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,10 +2,12 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.WaiWaiChansAndroidLabs" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
-         <item name="colorPrimary">@color/my_primary</item>
-         <item name="colorSecondary">@color/my_secondary</item>
-         <item name="android:statusBarColor">@color/my_statusbar</item>
-         <item name="android:textColor">@color/my_text</item>
+        <item name="colorPrimary">#0C8CF1</item>
+        <item name="colorSecondary">@color/my_secondary</item>
+        <item name="android:statusBarColor">@color/my_statusbar</item>
+        <item name="android:textColor">@color/my_text</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <style name="Theme.WaiWaiChansAndroidLabs" parent="Base.Theme.WaiWaiChansAndroidLabs" />
